Re-ran Jupyter notebooks with Py3k fixes.

--- a/src/problem/TSP.ipynb
+++ b/src/problem/TSP.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
     "# no need for @random_function because this will be used as a generator itself\n",
     "def randsol1(inst):\n",
     "    # Create a permutation by shuffling. We provide a custom shuffle function.\n",
-    "    return swap_shuffle(range(len(inst)))\n",
+    "    return swap_shuffle(list(range(len(inst))))\n",
     "\n",
     "@random_function # inform PTO that this function must be traced\n",
     "def swap_shuffle(perm): \n",
@@ -64,7 +64,7 @@
     "# no need for @random_function because this will be used as a generator itself\n",
     "def randsol2(inst):\n",
     "    # Create a permutation by shuffling. We provide a custom shuffle function.\n",
-    "    return rev_shuffle(range(len(inst)))\n",
+    "    return rev_shuffle(list(range(len(inst))))\n",
     "\n",
     "@random_function # inform PTO that this function must be traced\n",
     "def rev_shuffle(perm):\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -177,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def randprob(n): \n",
-    "    c = [[0 for x in xrange(n)] for x in xrange(n)] # initialise cost matrix\n",
+    "    c = [[0 for x in range(n)] for x in range(n)] # initialise cost matrix\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
     "            if i == j:\n",
@@ -207,16 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".  average trace size:  10\n",
-      "[7, 9, 2, 3, 5, 4, 6, 8, 1, 0]\n",
-      "-11.2286054988\n"
+      "[2, 0, 3, 4, 7, 5, 1, 6, 8, 9]\n",
+      "-7.122888958902607\n"
      ]
     }
    ],
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -282,16 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean -4.64 std 0.60 min -5.91 med -4.40 max -3.62\n",
-      "mean -5.02 std 0.96 min -7.87 med -4.74 max -3.97\n",
-      "Ttest_indResult(statistic=1.2555906149948408, pvalue=0.21964173194211625)\n"
+      "mean -4.95 std 0.97 min -6.43 med -5.11 max -3.00\n",
+      "mean -4.66 std 0.80 min -6.06 med -4.59 max -3.11\n",
+      "Ttest_indResult(statistic=-0.87661755372126837, pvalue=0.38815364804498165)\n"
      ]
     }
    ],
@@ -304,16 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean -6.43 std 1.19 min -8.79 med -6.24 max -4.71\n",
-      "mean -6.87 std 1.14 min -9.47 med -6.65 max -4.96\n",
-      "Ttest_indResult(statistic=1.0066463582924265, pvalue=0.32272534852071288)\n"
+      "mean -6.66 std 1.08 min -8.51 med -6.79 max -5.03\n",
+      "mean -6.91 std 1.28 min -9.41 med -7.12 max -4.86\n",
+      "Ttest_indResult(statistic=0.54150202663926106, pvalue=0.59244466216967306)\n"
      ]
     }
    ],
@@ -326,16 +325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean -2.72 std 0.50 min -4.02 med -2.63 max -1.55\n",
-      "mean -2.68 std 0.43 min -3.59 med -2.67 max -1.71\n",
-      "Ttest_indResult(statistic=-0.21221784629430332, pvalue=0.83347440749079049)\n"
+      "mean -2.75 std 0.60 min -4.32 med -2.54 max -2.09\n",
+      "mean -2.71 std 0.65 min -4.14 med -2.46 max -1.85\n",
+      "Ttest_indResult(statistic=-0.14504142981404863, pvalue=0.8857171984542187)\n"
      ]
     }
    ],
@@ -355,16 +354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean -5.02 std 0.96 min -7.87 med -4.74 max -3.97\n",
-      "mean -6.87 std 1.14 min -9.47 med -6.65 max -4.96\n",
-      "Ttest_indResult(statistic=4.6664836419326408, pvalue=6.9005902412731272e-05)\n"
+      "mean -4.66 std 0.80 min -6.06 med -4.59 max -3.11\n",
+      "mean -6.91 std 1.28 min -9.41 med -7.12 max -4.86\n",
+      "Ttest_indResult(statistic=5.5883197372760796, pvalue=5.5717136094349862e-06)\n"
      ]
     }
    ],
@@ -377,16 +376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean -5.02 std 0.96 min -7.87 med -4.74 max -3.97\n",
-      "mean -2.68 std 0.43 min -3.59 med -2.67 max -1.71\n",
-      "Ttest_indResult(statistic=-8.3136513164084, pvalue=4.7944607593335423e-09)\n"
+      "mean -4.66 std 0.80 min -6.06 med -4.59 max -3.11\n",
+      "mean -2.71 std 0.65 min -4.14 med -2.46 max -1.85\n",
+      "Ttest_indResult(statistic=-7.0707106203998018, pvalue=1.0828123959424254e-07)\n"
      ]
     }
    ],
@@ -399,16 +398,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean -6.87 std 1.14 min -9.47 med -6.65 max -4.96\n",
-      "mean -2.68 std 0.43 min -3.59 med -2.67 max -1.71\n",
-      "Ttest_indResult(statistic=-12.92644502840748, pvalue=2.5267375309572285e-13)\n"
+      "mean -6.91 std 1.28 min -9.41 med -7.12 max -4.86\n",
+      "mean -2.71 std 0.65 min -4.14 med -2.46 max -1.85\n",
+      "Ttest_indResult(statistic=-10.925473805613871, pvalue=1.3169140516706127e-11)\n"
      ]
     }
    ],
@@ -432,12 +431,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os.path\n",
     "\n",
+    "dirname = \"TSPLIB\"\n",
     "def get_TSPLIB(dirname):\n",
     "    import os\n",
     "    import tarfile\n",
@@ -455,12 +457,12 @@
     "    tar.close()\n",
     "    \n",
     "if not os.path.isfile(os.path.join(dirname, \"att48.tsp.gz\")): # example to check if TSPLIB already exists\n",
-    "    get_TSPLIB(\"TSPLIB\")"
+    "    get_TSPLIB(dirname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +504,7 @@
     "        \"\"\"FIXME this only works for files in the node xy-coordinate\n",
     "        format. Some files eg bayg29.tsp.gz give explicit edge weights\n",
     "        instead.\"\"\"\n",
-    "        f = gzip.open(filename, \"rb\")\n",
+    "        f = gzip.open(filename, \"rt\") # note t to force text mode\n",
     "        coord_section = False\n",
     "        for line in f.readlines():\n",
     "            line = line.strip()\n",
@@ -539,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,22 +557,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that for both of these problems, `randsol3` (using the GRASP-like problem data approach) wins:"
+    "We see that for both of these problems (0 and 1 below), `randsol3` (using the GRASP-like problem data approach) wins:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, True, 'randsol1', 'HC'): mean -70592.02 std 5223.95 min -78956.95 med -70283.02 max -59564.07\n",
-      "(0, True, 'randsol3', 'HC'): mean -60951.05 std 4397.65 min -68988.38 med -60144.41 max -55396.89\n",
-      "(1, True, 'randsol1', 'HC'): mean -15099.09 std 865.19 min -16477.81 med -15071.50 max -13831.87\n",
-      "(1, True, 'randsol3', 'HC'): mean -13943.62 std 1144.72 min -15880.97 med -14135.62 max -12026.88\n"
+      "(0, True, 'randsol1', 'HC'): mean -69967.14 std 6623.34 min -86377.22 med -67960.97 max -62804.23\n",
+      "(0, True, 'randsol3', 'HC'): mean -62941.83 std 5384.10 min -75867.82 med -60907.97 max -55909.58\n",
+      "(1, True, 'randsol1', 'HC'): mean -15344.31 std 1141.77 min -18103.86 med -15109.93 max -13342.80\n",
+      "(1, True, 'randsol3', 'HC'): mean -14470.33 std 1136.77 min -15809.94 med -14837.14 max -11821.65\n"
      ]
     }
    ],
@@ -588,34 +590,25 @@
     "We have demonstrated the use of a permutation search space, and the comparison of multiple generators, and the use of problem data in the generator for improved performance. And we have seen some more use of `compare_all` and statistical testing on its results, and how to read problem instances for TSP.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
