--- a/src/problem/wingate_etal_2011_algo_4.ipynb
+++ b/src/problem/wingate_etal_2011_algo_4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wingate et al., AIstat_summary 2011, Algorithm 4\n",
+    "Wingate et al., AISTATS 2011, Algorithm 4\n",
     "---\n",
     "\n",
     "This paper by Wingate et al. proposes methods for recording, editing, and playing-back program traces, which become core components in PTO.\n",
@@ -111,8 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.1250017242418833, 0.03440916362225633, 1.2527401514967758, 0.48426153719285503, 1.3708654354886314, 1.4606277159874475, 0.06843229168290292, 1.705244945114607, 2.436036978341712, 0.7599906487459528, 0.10948734179255812, 1.0363381356236474, 0.899048506757045, 0.1323435110086408, 1.895726098059353, 1.234083009302191, 0.35502190034742154, 0.9826755349121823, 1.44459866916048, 0.4628223350521674, 0.2253260210722508, 1.1179371324600886, 0.6812351732496652, 0.5325693343224871, 0.731307848540265, -0.3667340228207865, 1.587646711796417, 0.4199073112597792]\n",
-      "('fitness: ', 24.17895114381088)\n"
+      "[0.08358466201190759, 0.48143161905919946, 0.23853223262173445, 0.6421584913865963, 1.9571024812345295, 1.003821634311713, 0.20572271768498082, 4.417013897601947, 1.1649710388394199, 3.40100922232921, 1.0169776821846943, 0.060491490083636655, 1.9445634926319095, 0.376549334988143, 0.04109482285905346, 1.6239008268679758, 0.06666455317723373, 1.787518507864078, -2.141203655902093, -0.04143280744123887, -0.01911717380521149, 2.087048987735042, 2.0413363142739085, 1.4356382390520834, -0.8600251825586029, 0.49526039305865066, -0.4596633240588841, 0.06607474601206834, 1.872817007804373, 0.6173207547654004, 0.09706202473336747, 0.17148841631155817, 3.614169590582924, -0.8771742944702844]\n",
+      "('fitness: ', 28.61270874383103)\n"
      ]
     }
    ],
@@ -147,120 +147,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(None, False, 'generator', 'RS') 38.0116251102\n",
-      "(None, False, 'generator', 'HC') 131.285579646\n",
-      "(None, False, 'generator', 'LA') 172.664080657\n",
-      "(None, False, 'generator', 'EA') 129.231888812\n",
-      "(None, False, 'generator', 'PS') 118.8642199\n",
-      "(None, True, 'generator', 'RS') 43.3675204453\n",
-      "(None, True, 'generator', 'HC') 367.445714938\n",
-      "(None, True, 'generator', 'LA') 274.095546235\n",
-      "(None, True, 'generator', 'EA') 265.053609808\n",
-      "(None, True, 'generator', 'PS') 192.573180364\n",
-      "(None, False, 'generator', 'RS') 37.4300091569\n",
-      "(None, False, 'generator', 'HC') 143.025177524\n",
-      "(None, False, 'generator', 'LA') 136.14143454\n",
-      "(None, False, 'generator', 'EA') 136.556102761\n",
-      "(None, False, 'generator', 'PS') 156.080370431\n",
-      "(None, True, 'generator', 'RS') 39.8088577916\n",
-      "(None, True, 'generator', 'HC') 362.931336414\n",
-      "(None, True, 'generator', 'LA') 317.081544872\n",
-      "(None, True, 'generator', 'EA') 307.182717566\n",
-      "(None, True, 'generator', 'PS') 212.334785172\n",
-      "(None, False, 'generator', 'RS') 38.0253001762\n",
-      "(None, False, 'generator', 'HC') 110.509421951\n",
-      "(None, False, 'generator', 'LA') 139.517076457\n",
-      "(None, False, 'generator', 'EA') 124.456119102\n",
-      "(None, False, 'generator', 'PS') 160.625798553\n",
-      "(None, True, 'generator', 'RS') 33.5274938577\n",
-      "(None, True, 'generator', 'HC') 348.012466556\n",
-      "(None, True, 'generator', 'LA') 289.658475776\n",
-      "(None, True, 'generator', 'EA') 262.45707806\n",
-      "(None, True, 'generator', 'PS') 217.819155607\n",
-      "(None, False, 'generator', 'RS') 39.518839443\n",
-      "(None, False, 'generator', 'HC') 163.486690458\n",
-      "(None, False, 'generator', 'LA') 147.159897018\n",
-      "(None, False, 'generator', 'EA') 124.461575399\n",
-      "(None, False, 'generator', 'PS') 127.440293599\n",
-      "(None, True, 'generator', 'RS') 33.9714039687\n",
-      "(None, True, 'generator', 'HC') 323.309079168\n",
-      "(None, True, 'generator', 'LA') 260.694161142\n",
-      "(None, True, 'generator', 'EA') 296.771602974\n",
-      "(None, True, 'generator', 'PS') 222.113287267\n",
-      "(None, False, 'generator', 'RS') 35.0008244351\n",
-      "(None, False, 'generator', 'HC') 150.706335984\n",
-      "(None, False, 'generator', 'LA') 150.616893887\n",
-      "(None, False, 'generator', 'EA') 152.212832613\n",
-      "(None, False, 'generator', 'PS') 119.99379547\n",
-      "(None, True, 'generator', 'RS') 40.9175065115\n",
-      "(None, True, 'generator', 'HC') 340.680917716\n",
-      "(None, True, 'generator', 'LA') 295.314096834\n",
-      "(None, True, 'generator', 'EA') 261.649309957\n",
-      "(None, True, 'generator', 'PS') 225.782361583\n",
-      "(None, False, 'generator', 'RS') 36.7552112003\n",
-      "(None, False, 'generator', 'HC') 152.763467201\n",
-      "(None, False, 'generator', 'LA') 167.830251916\n",
-      "(None, False, 'generator', 'EA') 174.779790523\n",
-      "(None, False, 'generator', 'PS') 135.993149155\n",
-      "(None, True, 'generator', 'RS') 35.4997538358\n",
-      "(None, True, 'generator', 'HC') 350.028600116\n",
-      "(None, True, 'generator', 'LA') 343.535289878\n",
-      "(None, True, 'generator', 'EA') 279.536643191\n",
-      "(None, True, 'generator', 'PS') 218.265168136\n",
-      "(None, False, 'generator', 'RS') 38.071924139\n",
-      "(None, False, 'generator', 'HC') 169.3053158\n",
-      "(None, False, 'generator', 'LA') 134.321598817\n",
-      "(None, False, 'generator', 'EA') 129.615142832\n",
-      "(None, False, 'generator', 'PS') 113.327017398\n",
-      "(None, True, 'generator', 'RS') 36.6444487373\n",
-      "(None, True, 'generator', 'HC') 342.245409236\n",
-      "(None, True, 'generator', 'LA') 322.012849098\n",
-      "(None, True, 'generator', 'EA') 269.641135924\n",
-      "(None, True, 'generator', 'PS') 200.628735653\n",
-      "(None, False, 'generator', 'RS') 36.7697711138\n",
-      "(None, False, 'generator', 'HC') 127.446808848\n",
-      "(None, False, 'generator', 'LA') 153.571353377\n",
-      "(None, False, 'generator', 'EA') 134.193339447\n",
-      "(None, False, 'generator', 'PS') 127.545145507\n",
-      "(None, True, 'generator', 'RS') 32.3388061113\n",
-      "(None, True, 'generator', 'HC') 306.857799933\n",
-      "(None, True, 'generator', 'LA') 287.708992526\n",
-      "(None, True, 'generator', 'EA') 259.910996513\n",
-      "(None, True, 'generator', 'PS') 214.182749159\n",
-      "(None, False, 'generator', 'RS') 38.5435069924\n",
-      "(None, False, 'generator', 'HC') 131.021975707\n",
-      "(None, False, 'generator', 'LA') 173.767270039\n",
-      "(None, False, 'generator', 'EA') 140.661300932\n",
-      "(None, False, 'generator', 'PS') 179.358740648\n",
-      "(None, True, 'generator', 'RS') 44.4175615173\n",
-      "(None, True, 'generator', 'HC') 330.155103289\n",
-      "(None, True, 'generator', 'LA') 274.89356902\n",
-      "(None, True, 'generator', 'EA') 285.457367026\n",
-      "(None, True, 'generator', 'PS') 208.235964267\n",
-      "(None, False, 'generator', 'RS') 43.8087843712\n",
-      "(None, False, 'generator', 'HC') 120.88394933\n",
-      "(None, False, 'generator', 'LA') 150.352082297\n",
-      "(None, False, 'generator', 'EA') 137.833586116\n",
-      "(None, False, 'generator', 'PS') 128.099559802\n",
-      "(None, True, 'generator', 'RS') 38.084106417\n",
-      "(None, True, 'generator', 'HC') 327.952180956\n",
-      "(None, True, 'generator', 'LA') 293.364658385\n",
-      "(None, True, 'generator', 'EA') 300.972072037\n",
-      "(None, True, 'generator', 'PS') 188.831497501\n"
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n"
      ]
     }
    ],
    "source": [
     "# compare_all: you can pass in sizes if needed, else None. It uses 'budget', not 'effort'.\n",
     "results = compare_all(fitness, [generator], sizes=None, \n",
-    "                      methods=None, budget=10000, num_runs=10)"
+    "                      methods=[\"HC\", \"LA\", \"EA\"], str_traces=[False, True], \n",
+    "                      budget=10000, num_runs=10)"
    ]
   },
   {
@@ -272,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean 140.04 std 18.02 min 110.51 med 137.16 max 169.31\n",
-      "mean 339.96 std 17.52 min 306.86 med 341.46 max 367.45\n",
-      "Ttest_indResult(statistic=-23.866841778779722, pvalue=4.4656991378244708e-15)\n"
+      "mean 124.37 std 24.10 min 84.70 med 120.76 max 175.12\n",
+      "mean 344.63 std 26.21 min 305.41 med 336.87 max 391.70\n",
+      "Ttest_indResult(statistic=-18.559297810658265, pvalue=3.4870167422353794e-13)\n"
      ]
     }
    ],
@@ -301,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean 339.96 std 17.52 min 306.86 med 341.46 max 367.45\n",
-      "mean 278.86 std 16.90 min 259.91 med 274.59 max 307.18\n",
-      "Ttest_indResult(statistic=7.5306762107943719, pvalue=5.7340017105491142e-07)\n"
+      "mean 344.63 std 26.21 min 305.41 med 336.87 max 391.70\n",
+      "mean 283.92 std 10.81 min 267.45 med 284.41 max 299.74\n",
+      "Ttest_indResult(statistic=6.4230721300762541, pvalue=4.7942300292880871e-06)\n"
      ]
     }
    ],
@@ -330,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean 339.96 std 17.52 min 306.86 med 341.46 max 367.45\n",
-      "mean 295.84 std 23.81 min 260.69 med 291.51 max 343.54\n",
-      "Ttest_indResult(statistic=4.4785064029570272, pvalue=0.00029045136637852127)\n"
+      "mean 344.63 std 26.21 min 305.41 med 336.87 max 391.70\n",
+      "mean 299.75 std 18.42 min 274.29 med 299.51 max 330.42\n",
+      "Ttest_indResult(statistic=4.202115967932464, pvalue=0.00053569475594783056)\n"
      ]
     }
    ],
@@ -366,15 +287,6 @@
     "* Instead of setting `m` at the start, decide \"whether to stop\" at each\n",
     "iteration -- need to make sure `m` distribution is still Poisson, though.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
