PTO file for compiler

--- a/src/problem/onemax.ipynb
+++ b/src/problem/onemax.ipynb
@@ -18,12 +18,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from PTO import solve, random"
+    "from PTO import random, solve"
    ]
   },
   {
@@ -96,11 +94,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random solution: fitness 4; [0, 1, 1, 0, 0, 0, 0, 1, 0, 1]\n",
-      "Random solution: fitness 1; [0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
-      "Random solution: fitness 7; [0, 1, 0, 1, 1, 1, 1, 1, 1, 0]\n",
-      "Random solution: fitness 9; [1, 1, 1, 1, 1, 1, 1, 1, 1, 0]\n",
-      "Random solution: fitness 2; [0, 0, 0, 1, 1, 0, 0, 0, 0, 0]\n"
+      "Random solution: fitness 6; [0, 1, 0, 1, 1, 0, 1, 1, 1, 0]\n",
+      "Random solution: fitness 5; [1, 0, 0, 1, 1, 0, 0, 1, 1, 0]\n",
+      "Random solution: fitness 4; [1, 0, 1, 0, 0, 0, 0, 1, 1, 0]\n",
+      "Random solution: fitness 4; [1, 0, 0, 1, 1, 1, 0, 0, 0, 0]\n",
+      "Random solution: fitness 6; [1, 1, 0, 0, 0, 1, 0, 1, 1, 1]\n"
      ]
     }
    ],
@@ -130,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 [1, 1, 1, 1, 1, 1, 0, 1, 1, 1]\n"
+      "(10, [1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -159,10 +157,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 [0, 1, 0, 1, 1, 1, 1, 1, 1, 1]\n",
-      "10 [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "9 [1, 1, 1, 1, 1, 1, 1, 1, 1, 0]\n",
-      "9 [1, 1, 1, 1, 1, 1, 1, 0, 1, 1]\n"
+      "(9, [1, 1, 1, 1, 1, 1, 1, 0, 1, 1])\n",
+      "(10, [1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n",
+      "(7, [1, 0, 1, 1, 1, 0, 1, 1, 0, 1])\n",
+      "(10, [1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -185,25 +183,34 @@
     "\n",
     "We have seen how simple it is to approach a simple problem: `from PTO import solve, random`, write a solution generator `randsol()` which calls `random` functions, write a fitness function `fitness(x)`, and call `solve(randsol, fitness)`. We have then seen how to use `solve` to optimise the problem with no further user work required. We have also seen methods for controlling the amount of search effort. In later examples, we'll see how to approach other problem types, and some machinery for experimental analysis."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
