--- a/src/problem/sphere.ipynb
+++ b/src/problem/sphere.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "from PTO import solve, random"
+    "from PTO import random, solve"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
