Rewording slightly the TSP notebook.

--- a/src/problem/TSP.ipynb
+++ b/src/problem/TSP.ipynb
@@ -79,9 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Really* using the problem instance: GRASP\n",
+    "### *Really* using the problem instance\n",
     "\n",
-    "The two generators above look at the problem instance, but don't use it in any meaningful way. The next generator does: it builds up a permutation step by step, at each step choosing a city which is near the current one, with high probability. This is the essence of *GRASP*, a greedy randomized adaptive search procedure (Resende and Ribeiro, 2009). But this is still non-deterministic, so it is still suitable as a PTO generator.\n"
+    "The two generators above look at the problem instance, but don't use it in any meaningful way. The next generator does: it builds up a permutation step by step, at each step choosing a city which is near the current one, with high probability. This is similar to the main idea of GRASP (Ribeiro and Resende) and the biased randomisation heuristic (Juan et al.)."
    ]
   },
   {
@@ -463,7 +463,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math, gzip\n",
@@ -542,7 +544,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "results = compare_all(fitness, \n",
