Initial commit of adding Microbial Genetic Algotirhm to PTO. Also modifying the jupyter notebooks to include the MGA as a run option to enable a user to test it

--- a/src/problem/onemax.ipynb
+++ b/src/problem/onemax.ipynb
@@ -47,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fitness = sum"
@@ -69,9 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def randsol():\n",
@@ -94,11 +90,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random solution: fitness 6; [0, 1, 0, 1, 1, 0, 1, 1, 1, 0]\n",
-      "Random solution: fitness 5; [1, 0, 0, 1, 1, 0, 0, 1, 1, 0]\n",
-      "Random solution: fitness 4; [1, 0, 1, 0, 0, 0, 0, 1, 1, 0]\n",
-      "Random solution: fitness 4; [1, 0, 0, 1, 1, 1, 0, 0, 0, 0]\n",
-      "Random solution: fitness 6; [1, 1, 0, 0, 0, 1, 0, 1, 1, 1]\n"
+      "Random solution: fitness 6; [0, 1, 0, 1, 1, 1, 1, 1, 0, 0]\n",
+      "Random solution: fitness 7; [0, 1, 1, 1, 0, 1, 1, 1, 0, 1]\n",
+      "Random solution: fitness 7; [0, 1, 1, 1, 1, 1, 1, 0, 0, 1]\n",
+      "Random solution: fitness 7; [1, 1, 1, 0, 0, 1, 1, 1, 0, 1]\n",
+      "Random solution: fitness 3; [1, 0, 1, 1, 0, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -121,19 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, [1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n"
+      "8 [1, 0, 1, 1, 1, 1, 1, 0, 1, 1]\n"
      ]
     }
    ],
    "source": [
-    "ind, fit = solve(randsol, fitness, solver=\"EA\")\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\")\n",
     "print(fit, ind)"
    ]
   },
@@ -150,21 +146,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9, [1, 1, 1, 1, 1, 1, 1, 0, 1, 1])\n",
-      "(10, [1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n",
-      "(7, [1, 0, 1, 1, 1, 0, 1, 1, 0, 1])\n",
-      "(10, [1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n"
+      "HC\n",
+      "7 [0, 1, 1, 1, 1, 0, 1, 1, 0, 1]\n",
+      "10 [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "7 [1, 0, 1, 1, 1, 1, 0, 0, 1, 1]\n",
+      "10 [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "\n",
+      "\n",
+      "MGA\n",
+      "6 [0, 1, 1, 1, 0, 1, 0, 0, 1, 1]\n",
+      "8 [0, 1, 1, 1, 1, 1, 1, 0, 1, 1]\n",
+      "8 [1, 1, 0, 1, 1, 1, 0, 1, 1, 1]\n",
+      "10 [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "\n",
+      "\n",
+      "EA\n",
+      "9 [1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "10 [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "6 [1, 1, 0, 1, 1, 1, 0, 0, 0, 1]\n",
+      "9 [1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "\n",
+      "\n",
+      "RS\n",
+      "8 [1, 1, 0, 1, 1, 1, 1, 1, 0, 1]\n",
+      "9 [1, 1, 1, 1, 1, 1, 1, 0, 1, 1]\n",
+      "7 [1, 0, 0, 1, 1, 1, 0, 1, 1, 1]\n",
+      "8 [1, 1, 1, 0, 1, 1, 1, 0, 1, 1]\n"
      ]
     }
    ],
    "source": [
+    "print(\"HC\")\n",
     "ind, fit = solve(randsol, fitness, solver=\"HC\", budget=15)\n",
     "print(fit, ind)\n",
     "ind, fit = solve(randsol, fitness, solver=\"HC\", budget=150)\n",
@@ -172,6 +191,40 @@
     "ind, fit = solve(randsol, fitness, solver=\"HC\", effort=1)\n",
     "print(fit, ind)\n",
     "ind, fit = solve(randsol, fitness, solver=\"HC\", effort=2)\n",
+    "print(fit, ind)\n",
+    "\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"MGA\")\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\", budget=15)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\", budget=150)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\", effort=1)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\", effort=2)\n",
+    "print(fit, ind)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"EA\")\n",
+    "ind, fit = solve(randsol, fitness, solver=\"EA\", budget=15)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"EA\", budget=150)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"EA\", effort=1)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"EA\", effort=2)\n",
+    "print(fit, ind)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"RS\")\n",
+    "ind, fit = solve(randsol, fitness, solver=\"RS\", budget=15)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"RS\", budget=150)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"RS\", effort=1)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"RS\", effort=2)\n",
     "print(fit, ind)"
    ]
   },
@@ -196,21 +249,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
