--- a/src/problem/permutation.ipynb
+++ b/src/problem/permutation.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,18 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random solution: fitness 1; [4, 9, 0, 2, 1, 6, 5, 7, 3, 8]\n",
-      "Random solution: fitness 1; [3, 1, 5, 7, 0, 8, 9, 2, 6, 4]\n",
-      "Random solution: fitness 1; [4, 7, 2, 5, 9, 6, 1, 3, 0, 8]\n",
-      "Random solution: fitness 1; [4, 5, 7, 2, 0, 3, 6, 9, 1, 8]\n",
-      "Random solution: fitness 0; [3, 6, 9, 0, 1, 4, 7, 2, 5, 8]\n"
+      "Random solution: fitness 1; [3, 1, 8, 5, 6, 7, 4, 2, 9, 0]\n",
+      "Random solution: fitness 4; [8, 1, 2, 0, 4, 3, 7, 6, 5, 9]\n",
+      "Random solution: fitness 0; [7, 0, 4, 8, 5, 3, 9, 6, 1, 2]\n",
+      "Random solution: fitness 1; [6, 4, 1, 9, 3, 2, 0, 7, 5, 8]\n",
+      "Random solution: fitness 0; [4, 2, 8, 5, 1, 9, 0, 6, 3, 7]\n"
      ]
     }
    ],
@@ -120,19 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 [8, 6, 9, 0, 7, 5, 4, 3, 1, 2]\n"
+      "2 [9, 2, 3, 5, 0, 1, 6, 7, 4, 8]\n"
      ]
     }
    ],
    "source": [
-    "ind, fit = solve(randsol, fitness, solver=\"EA\")\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\")\n",
     "print(fit, ind)"
    ]
   },
@@ -149,21 +149,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 [0, 1, 4, 3, 8, 9, 7, 6, 5, 2]\n",
-      "10 [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "0 [4, 6, 1, 7, 2, 0, 5, 3, 9, 8]\n",
-      "0 [1, 3, 6, 9, 7, 2, 4, 8, 5, 0]\n"
+      "HC\n",
+      "3 [2, 0, 5, 3, 4, 8, 6, 9, 7, 1]\n",
+      "7 [0, 1, 2, 9, 4, 3, 6, 7, 8, 5]\n",
+      "3 [1, 0, 6, 3, 4, 9, 8, 7, 2, 5]\n",
+      "8 [0, 1, 2, 5, 4, 3, 6, 7, 8, 9]\n",
+      "\n",
+      "\n",
+      "MGA\n",
+      "1 [7, 8, 1, 0, 5, 9, 6, 4, 3, 2]\n",
+      "3 [1, 6, 2, 3, 8, 4, 0, 7, 9, 5]\n",
+      "1 [3, 6, 5, 8, 4, 1, 7, 0, 9, 2]\n",
+      "4 [0, 6, 9, 3, 4, 2, 5, 1, 8, 7]\n",
+      "\n",
+      "\n",
+      "EA\n",
+      "3 [6, 3, 5, 0, 4, 2, 5, 7, 1, 9]\n",
+      "4 [0, 8, 2, 3, 7, 5, 1, 9, 6, 4]\n",
+      "2 [6, 1, 3, 9, 8, 5, 0, 4, 2, 7]\n",
+      "4 [0, 1, 2, 8, 1, 5, 9, 9, 9, 2]\n",
+      "\n",
+      "\n",
+      "RS\n",
+      "4 [1, 0, 5, 4, 3, 2, 6, 7, 8, 9]\n",
+      "4 [0, 6, 2, 7, 4, 3, 5, 9, 8, 1]\n",
+      "4 [8, 1, 0, 3, 2, 6, 5, 7, 4, 9]\n",
+      "4 [1, 4, 2, 3, 5, 7, 6, 9, 8, 0]\n"
      ]
     }
    ],
    "source": [
+    "print(\"HC\")\n",
     "ind, fit = solve(randsol, fitness, solver=\"HC\", budget=15)\n",
     "print(fit, ind)\n",
     "ind, fit = solve(randsol, fitness, solver=\"HC\", budget=150)\n",
@@ -171,6 +194,40 @@
     "ind, fit = solve(randsol, fitness, solver=\"HC\", effort=1)\n",
     "print(fit, ind)\n",
     "ind, fit = solve(randsol, fitness, solver=\"HC\", effort=2)\n",
+    "print(fit, ind)\n",
+    "\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"MGA\")\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\", budget=15)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\", budget=150)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\", effort=1)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"MGA\", effort=2)\n",
+    "print(fit, ind)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"EA\")\n",
+    "ind, fit = solve(randsol, fitness, solver=\"EA\", budget=15)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"EA\", budget=150)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"EA\", effort=1)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"EA\", effort=2)\n",
+    "print(fit, ind)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"RS\")\n",
+    "ind, fit = solve(randsol, fitness, solver=\"RS\", budget=15)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"RS\", budget=150)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"RS\", effort=1)\n",
+    "print(fit, ind)\n",
+    "ind, fit = solve(randsol, fitness, solver=\"RS\", effort=2)\n",
     "print(fit, ind)"
    ]
   },
@@ -209,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
